src/main/java/org/example/chatssecretos/domain/errors/ErrorAppMessages.java
package org.example.chatssecretos.domain.errors;

public enum ErrorAppMessages implements ErrorApp {
    MESSAGES_NOT_FOUND
}
